--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -21,4 +21,4 @@ jobs:
                   .git
                   .github
                   .ftp-deploy-sync-state.json
-                  
+                  .gitignore
